--- a/index En.html
+++ b/index En.html
@@ -15,7 +15,7 @@
                 <a href="index.html"><img src="images/logo.png"></a>
                 <a href="index.html"><h2><span class="material-symbols-outlined">
                     translate
-                    </span>TURKISH</h2></a>
+                    </span>TÜRKÇE</h2></a>
                 <div class="nav-links" id="navLinks">
                     <span class="material-symbols-outlined" onclick="hidemenu()">
                         close
@@ -50,7 +50,7 @@
                         <h2>Trustable Crew</h2>
                         <div class="icon">
                             <span class="material-symbols-outlined">group</span>
-                            <p>Our experianced captains that have crossed the  oceans and seas on a regular basis have the needed skill and competence to deliver any ship regardless of its size and tonnage to any point in the world. Our passionate crew is ready to deliver your yacht to your selected port.</p>
+                            <p>Our main mission is to serve owners of yachts with any tonnage and size with the same professionalism all around the world. We target serving you the best way possible with our crew that transfered many ships through companys and individuals, professional at maintaining your yachts.</p>
                         </div>                           
                     </div>
                     <div class="img"></div>                   
@@ -64,7 +64,7 @@
                             <span class="material-symbols-outlined">
                                 fast_forward
                                 </span>
-                            <p>As soon as weather and sea conditions are met, our crew will get to the selected port as soon as possible, delivering your yacht safely without any stops except loading supply.</p>
+                            <p>Our experianced crew delivers your ships the fastest and the safest way possible that you lended us with trust. we transfer any ship ( Motor Yachts, Katamarans, Sailboats, Racing Sailboats. ) fast and safe for affordable prices. All you need to do is contacting us!</p>
                         </div>                           
                     </div>            
                     <div class="img2"></div>                           
@@ -73,10 +73,10 @@
             <div class="ff">
                 <div class="feature-box">
                     <div class="description">
-                        <h2>High Quality Service</h2>
+                        <h2>How Our Transfers Work</h2>
                         <div class="icon">
                             <span class="material-symbols-outlined">directions_boat</span>
-                            <p>Our crew will specify the deficiencies and help you complete the ship for the voyage. We report every situation and forward it to you. We provide you online tracking possibilities so you can sit and follow the progress.</p>
+                            <p>After you accept our offer, our crew will come to your yacht in the selected date. Our crew inspects your ship to its details to its transferability and our crew will start the voyage according to the weather conditions. After taking control of the ship, 2 captains and if needed, extra crew members will start the voyage without any breaks. Our crew will deliver the ship to you or the authorized staff at the destination port and will inform about the voyage.</p>
                         </div>                           
                     </div>
                     <div class="img3"></div>                   
