--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                         <h2>Güvenilir Ekip</h2>
                         <div class="icon">
                             <span class="material-symbols-outlined">group</span>
-                            <p>Uzun yıllardır deniz ve okyanusların düzenli olarak geçen tecrübeli kaptanlarımız Dünya'daki her gemiyi istediğiniz her noktaya götürebilecek yeterlilik ve yetenek sahibidir. Mesleğini severek yapan ekibimiz yatınızı sizin seçtiğiniz varış limanına güvenli bir şekilde ulaştıracak.</p>
+                            <p>Her tipte ve boyuttaki teknelerin sahiplerine dünyanın her noktasında aynı profesyonellikte hizmet verebilmek başlıca misyonumuzdur.
+
+                                Kurumsal firmalara ve şahıslara uzun yıllardır denizden transfer desteği ile hizmet veren, sevk ve idare konusuna oldukça hakim, profesyonel ehliyetli, gerek yurt içinde gerekse yurt dışında binlerce mil tecrübesiyle birçok sorunsuz teslimat gerçekleştirmiş uzman ekibimizle sizlere en iyi şekilde hizmet vermeyi hedeflemekteyiz. </p>
                         </div>                           
                     </div>
                     <div class="img"></div>                   
@@ -59,12 +61,14 @@
             <div class="ff">
                 <div class="feature-box">
                     <div class="description">
-                        <h2>Hızlı Transfer</h2>
+                        <h2>Hızlı Teslimat</h2>
                         <div class="icon">
                             <span class="material-symbols-outlined">
                                 fast_forward
                                 </span>
-                            <p>Ekibimiz hava ve deniz koşulları el verdiği sürece, ikmal harici duraklama yapmadan 7/24 vardiya tutarak teknenizi gideceği limana en emniyetli şekilde ulaştıracaktır.</p>
+                            <p>Gönül rahatlığı ile verdiğiniz teknelerinizi en güvenilir ve en hızlı şekilde istediğiniz noktaya tecrübeli ekibimiz sizin yerinize getiriyor. Tüm teknelerinizin ( Motor Yat,Katamaran, Yelkenli Gezi Teknesi, Yelkenli Yarış Teknesi ) transferleri istediğiniz yere en uygun fiyatlarla güvenli ve hızlı bir şekilde gerçekleştirilmektedir.
+
+                                Tek yapmanız gereken bizimle iletişime geçmek.</p>
                         </div>                           
                     </div>            
                     <div class="img2"></div>                           
@@ -73,10 +77,16 @@
             <div class="ff">
                 <div class="feature-box">
                     <div class="description">
-                        <h2>Kaliteli Hizmet</h2>
+                        <h2>Tekne Transferlerimiz Nasıl İşler</h2>
                         <div class="icon">
                             <span class="material-symbols-outlined">directions_boat</span>
-                            <p>Teknenizi devir alırken eksikleri belirleyip, tamamlamanızda yardımcı oluyor, Seyir sırasında her şeyi raporluyor ve tarafınıza iletiyoruz, ayrıca bulunduğunuz yerden teknenizi online olarak takip etmenizi sağlıyoruz.</p>
+                            <p>Teklifimizi onaylamanız sonrası, belirlenen tarihte transferinizi gerçekleştirecek ekibimizi teknenizi teslim almak üzere yönlendiriyoruz.
+
+                                Ekibimiz teknenizi detaylı olarak inceleyip transfere uygunluğunu denetleyerek teknenizi teslim aldıktan sonra hava şartlarına uygun bir şekilde seyire başlar.
+                                
+                                Seyrimiz iki kaptan ve uygun ekip kullanılarak molasız vardiyalı seyir yaparak devam eder.
+                                
+                                Varış limanında tekneniz size veya yetkili kişiye teslim edilecek ve ekibimizin seyir hakkındaki  görüşleri tarafınıza iletilecektir.</p>
                         </div>                           
                     </div>
                     <div class="img3"></div>                   
